--- a/.config/kitty/custom.conf
+++ b/.config/kitty/custom.conf
@@ -1,6 +1,7 @@
 # Fonts
 #font_family      JetBrainsMono Nerd Font Mono
 font_family      CaskaydiaCove Nerd Font Mono
+#font_family      SFMono Nerd Font
 #font_family      FiraCode Nerd Font Mono
 #font_family      MesloLGL Nerd Font Mono
 bold_font        auto
