--- a/.config/kitty/custom.conf
+++ b/.config/kitty/custom.conf
@@ -1,16 +1,12 @@
 # Fonts
 #font_family      JetBrainsMono Nerd Font Mono
 font_family      CaskaydiaCove Nerd Font Mono
-#font_family      SFMono Nerd Font
-#font_family      FiraCode Nerd Font Mono
-#font_family      MesloLGL Nerd Font Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-font_size 13
+font_size 14
 
-
-# Mapping keys
+# Tab navigation
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
 map cmd+3 goto_tab 3
@@ -21,15 +17,30 @@ map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
 
+# Use option key instead of Alt
+macos_option_as_alt no
+
+# Window navigation
+map alt+left  neighboring_window left
+map alt+right neighboring_window right
+map alt+up    neighboring_window up
+map alt+down  neighboring_window down
+map alt+f toggle_layout stack
+
 # Background Opacity
 dynamic_background_opacity  yes
 background_opacity          0.9
 
 # Background Blur effect
-background_blur 20
+background_blur 30
 
 # Window options
-remember_window_size        no
-initial_window_width        950
-initial_window_height       500
+remember_window_size        yes
 
+# Window
+enabled_layouts Grid,stack
+window_border_width 1.5pt
+window_margin_width 2
+
+# Cursor
+cursor_shape block
