--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -288,7 +288,7 @@
 #: so if you want to override it, place your value after the lines
 #: where the theme file is included.
 
-cursor_shape beam
+# cursor_shape beam
 
 #: The cursor shape can be one of block, beam, underline. Note that
 #: when reloading the config this will be changed only if the cursor
@@ -2612,5 +2612,5 @@ tab_powerline_style round
 
 #: }}}
 
-include /Users/medajlassi/.config/kitty/custom.conf
+include ~/.config/kitty/custom.conf
 
