--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -36,6 +36,10 @@ background_blur 0
 
 # Window options
 remember_window_size        yes
+# hide_window_decorations titlebar-only
+# hide_window_decorations titlebar-and-corners
+placement_strategy center
+macos_titlebar_color background
 
 # Window
 enabled_layouts Grid,stack
@@ -43,9 +47,12 @@ window_border_width 1.5pt
 window_margin_width 2
 window_padding_width 16
 single_window_padding_width 8
+macos_show_window_title_in window
 
 # Cursor
-cursor_shape block
+#cursor_shape block
 cursor_trail 1
 cursor_blink_interval       0.5
 cursor_stop_blinking_after  1
+# focus_follows_mouse yes
+macos_custom_beam_cursor no
