--- a/.config/kitty/light-theme.auto.conf
+++ b/.config/kitty/light-theme.auto.conf
@@ -19,6 +19,8 @@ active_tab_background    #f2e9e1
 inactive_tab_foreground  #9893a5
 inactive_tab_background  #faf4ed
 
+active_border_color      #31748f
+
 # black
 color0   #f2e9e1
 color8   #9893a5
