update .zshrc and kitty conf

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -43,11 +43,12 @@ macos_titlebar_color background
 
 # Window
 enabled_layouts Grid,stack
-window_border_width 1.5pt
-window_margin_width 2
+draw_minimal_borders yes
+#window_border_width 1.5pt
+#window_margin_width 2
 window_padding_width 16
 single_window_padding_width 8
-macos_show_window_title_in window
+macos_show_window_title_in none
 
 # Cursor
 #cursor_shape block
@@ -56,3 +57,15 @@ cursor_blink_interval       0.5
 cursor_stop_blinking_after  1
 # focus_follows_mouse yes
 macos_custom_beam_cursor no
+
+# Tab
+tab_bar_edge bottom
+tab_bar_margin_width 0.0
+tab_bar_style powerline
+tab_powerline_style angled
+
+# BEGIN_KITTY_THEME
+# Nord
+include current-theme.conf
+# END_KITTY_THEME
+
