--- a/.config/kitty/light-theme.auto.conf
+++ b/.config/kitty/light-theme.auto.conf
@@ -1,55 +1,73 @@
-## name: Rosé Pine Dawn
-## author: mvllow
-## license: MIT
-## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine-dawn.conf
-## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
+# vim:ft=kitty
+## name: Nord
+## author: Eric N. Vander Weele
+## upstream: https://www.nordtheme.com/
+## blurb: Nord theme utilizing the full Frost and Aurora palette.
 
-foreground               #575279
-background               #faf4ed
-selection_foreground     #575279
-selection_background     #dfdad9
+# Basic colors
+foreground           #d8dee9
+background           #2e3440
+selection_foreground #d8dee9
+selection_background #434c5e
 
-cursor                   #cecacd
-cursor_text_color        #575279
+# Cursor colors
+cursor            #d8dee9
+cursor_text_color #3b4252
 
-url_color                #907aa9
+# URL underline color when hovering with mouse
+url_color #0087bd
 
-active_tab_foreground    #575279
-active_tab_background    #f2e9e1
-inactive_tab_foreground  #9893a5
-inactive_tab_background  #faf4ed
+# Window border colors and terminal bell colors
+active_border_color   #81a1c1
+inactive_border_color #4c566a
+bell_border_color     #88c0d0
+visual_bell_color     none
 
-active_border_color      #31748f
+# Tab bar colors
+active_tab_foreground   #3b4252
+active_tab_background   #88c0d0
+inactive_tab_foreground #e5e9f0
+inactive_tab_background #4c566a
+tab_bar_background      #3b4252
+tab_bar_margin_color    none
 
+# Mark colors (marked text in the terminal)
+mark1_foreground #3b4252
+mark1_background #88c0d0
+mark2_foreground #3b4252
+mark2_background #bf616a
+mark3_foreground #3b4252
+mark3_background #ebcb8b
+
+# The basic 16 colors
 # black
-color0   #f2e9e1
-color8   #9893a5
+color0 #3b4252
+color8 #4c566a
 
 # red
-color1   #b4637a
-color9   #b4637a
+color1 #bf616a
+color9 #bf616a
 
 # green
-color2   #286983
-color10  #286983
+color2  #a3be8c
+color10 #a3be8c
 
 # yellow
-color3   #ea9d34
-color11  #ea9d34
+color3  #ebcb8b
+color11 #d08770
 
 # blue
-color4   #56949f
-color12  #56949f
+color4  #81a1c1
+color12 #5e81ac
 
 # magenta
-color5   #907aa9
-color13  #907aa9
+color5  #b48ead
+color13 #b48ead
 
 # cyan
-color6   #d7827e
-color14  #d7827e
+color6  #88c0d0
+color14 #8fbcbb
 
 # white
-color7   #575279
-color15  #575279
-
+color7  #e5e9f0
+color15 #eceff4
