--- a/.config/zsh/custom.conf
+++ b/.config/zsh/custom.conf
@@ -10,6 +10,7 @@ fi
 # Pretty ls
 if command -v "eza" &>/dev/null; then
     alias l='eza -lh --icons=auto' \
+        ls='eza' \
         ll='eza -lha --icons=auto --sort=name --group-directories-first' \
         ld='eza -lhD --icons=auto' \
         lt='eza --icons=auto --tree'
